excercise-2/nginx-pod-port-80.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-port-80
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
