excercise-2/nginx-pod-port-8080.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-port-8080
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 8080
